--- a/maze-game-2021/maze-game-2021.vcxproj
+++ b/maze-game-2021/maze-game-2021.vcxproj
@@ -139,7 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="front-end.cpp" />
     <ClCompile Include="maze-game-2021.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="front-end.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
