--- a/maze-game-2021/maze-game-2021.vcxproj
+++ b/maze-game-2021/maze-game-2021.vcxproj
@@ -139,11 +139,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="back-end.cpp" />
     <ClCompile Include="front-end.cpp" />
+    <ClCompile Include="logs.cpp" />
     <ClCompile Include="maze-game-2021.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="back-end.h" />
     <ClInclude Include="front-end.h" />
+    <ClInclude Include="logs.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
