--- a/maze-game-2021/maze-game-2021.vcxproj.filters
+++ b/maze-game-2021/maze-game-2021.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="back-end.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="dialogue.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="front-end.h">
@@ -36,6 +39,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="back-end.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="dialogue.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Bulgarify.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
